--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,22 @@
 			<p class="responsive-mixin-example">
 					Responsive mixin
 			</p>
+			<p class="js-open-modal">
+					Modal example
+			</p>
+			<p class="js-open-modal2">
+					Modal example 2
+			</p>
+	</div>
+	
+	<div class="modal test-modal">
+		Test modal
+		<div class="js-close-modal">Close</div>
+	</div>
+
+	<div class="modal test-modal2">
+		Test modal 2
+		<div class="js-close-modal">Close</div>
 	</div>
 	
 </body>
