form module inprogress

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Title</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -13,26 +14,117 @@
 <body>
 
 	<div class="main">
-			<p class="responsive-mixin-example">
-					Responsive mixin
-			</p>
-			<p class="js-open-modal">
-					Modal example
-			</p>
-			<p class="js-open-modal2">
-					Modal example 2
-			</p>
+		<p class="responsive-mixin-example">
+			Responsive mixin
+		</p>
+		<p class="js-open-modal">
+			Modal example
+		</p>
+		<p class="js-open-modal2">
+			Modal example 2
+		</p>
 	</div>
-	
+
+	<form class="form-example">
+			<div class="field">
+				<label class="label">Name</label>
+				<div class="control">
+					<input class="input" type="text" placeholder="Text input">
+				</div>
+			</div>
+
+			<div class="field">
+				<label class="label">Username</label>
+				<div class="control has-icons-left has-icons-right">
+					<input class="input is-success" type="text" placeholder="Text input" value="bulma">
+					<span class="icon is-small is-left">
+						<i class="fas fa-user"></i>
+					</span>
+					<span class="icon is-small is-right">
+						<i class="fas fa-check"></i>
+					</span>
+				</div>
+				<p class="help is-success">This username is available</p>
+			</div>
+
+			<!-- <div class="field">
+				<label class="label">Email</label>
+				<div class="control has-icons-left has-icons-right">
+					<input class="input is-danger" type="email" placeholder="Email input" value="hello@">
+					<span class="icon is-small is-left">
+						<i class="fas fa-envelope"></i>
+					</span>
+					<span class="icon is-small is-right">
+						<i class="fas fa-exclamation-triangle"></i>
+					</span>
+				</div>
+				<p class="help is-danger">This email is invalid</p>
+			</div> -->
+
+			<div class="field">
+				<label class="label">Subject</label>
+				<div class="control">
+					<div class="select">
+						<select>
+							<option>Select dropdown</option>
+							<option>With options</option>
+						</select>
+					</div>
+				</div>
+			</div>
+
+			<div class="field">
+				<label class="label">Message</label>
+				<div class="control">
+					<textarea class="textarea" placeholder="Textarea"></textarea>
+				</div>
+			</div>
+
+			<div class="field">
+				<div class="control">
+					<label class="checkbox">
+						<input type="checkbox"> I agree to the
+						<a href="#">terms and conditions</a>
+					</label>
+				</div>
+			</div>
+
+			<div class="field">
+				<div class="control">
+					<label class="radio">
+						<input type="radio" name="question"> Yes
+					</label>
+					<label class="radio">
+						<input type="radio" name="question"> No
+					</label>
+				</div>
+			</div>
+
+			<div class="field is-grouped">
+				<div class="control">
+					<button class="button is-link js-submit-form">Submit</button>
+				</div>
+				<div class="control">
+					<button class="button is-text">Cancel</button>
+				</div>
+			</div>
+		</form>
+
 	<div class="modal test-modal">
-		Test modal
-		<div class="js-close-modal">Close</div>
+		<div class="modal__backdrop"></div>
+		<div class="modal__inner">
+			Test modal
+			<div class="js-close-modal">Close</div>
+		</div>
 	</div>
 
 	<div class="modal test-modal2">
-		Test modal 2
-		<div class="js-close-modal">Close</div>
-	</div>
-	
+		<div class="modal__backdrop"></div>
+		<div class="modal__inner">
+			Test modal 2
+			<div class="js-close-modal">Close</div>
+		</div>
+	</div>	
 </body>
+
 </html>
