--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 		</p>
 	</div>
 
-	<form class="form-example">
+	<form class="form-example test-form">
 			<div class="field">
 				<label class="label">Name</label>
 				<div class="control">
