--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 			<div class="field">
 				<label class="label">Username</label>
 				<div class="control has-icons-left has-icons-right">
-					<input class="input is-success" type="text" placeholder="Text input" value="bulma">
+					<input class="input is-success" type="text" name="username" placeholder="Text input" value="bulma">
 					<span class="icon is-small is-left">
 						<i class="fas fa-user"></i>
 					</span>
@@ -47,10 +47,10 @@
 				<p class="help is-success">This username is available</p>
 			</div>
 
-			<!-- <div class="field">
+			<div class="field">
 				<label class="label">Email</label>
 				<div class="control has-icons-left has-icons-right">
-					<input class="input is-danger" type="email" placeholder="Email input" value="hello@">
+					<input class="input" type="email" name="email" placeholder="Email input" value="hello@">
 					<span class="icon is-small is-left">
 						<i class="fas fa-envelope"></i>
 					</span>
@@ -58,8 +58,8 @@
 						<i class="fas fa-exclamation-triangle"></i>
 					</span>
 				</div>
-				<p class="help is-danger">This email is invalid</p>
-			</div> -->
+				<p class="error-message is-invisible help is-danger">This email is invalid</p>
+			</div>
 
 			<div class="field">
 				<label class="label">Subject</label>
