--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 
-	<div class="parrot">
+	<div class="parrot max-1100 has-text-right-tablet">
 		<img src="img/popug.jpg" alt="" class="parrot__image">
 		<div class="parrot__text"><b>ИНТЕРНЕТ И ТЕЛЕВИДЕНИЕ</b><br/>
 				от «Зеленой Точки» <br/>
@@ -121,11 +121,11 @@
 
 	<div class="zt-footer  max-1200">
 		<div class="columns">		
-			<div class="column">
+			<div class="column has-text-centered-mobile">
 				<a href="http://zelenaya.net" class="link">Перейти на сайт Зелёной точки</a>
 			</div>	
 			<div class="column copyr has-text-centered">© 2008-2018 Группа компаний «Зеленая точка»</div>	
-			<div class="column has-text-right-tablet"><a class="phone">(8652) 333-333</a></div>
+			<div class="column has-text-right-tablet has-text-centered-mobile"><a class="phone">(8652) 333-333</a></div>
 		</div>		
 	</div>
 
