--- a/src/index.html
+++ b/src/index.html
@@ -29,109 +29,7 @@
 		</div>
 	</div>
 
-	<div class="parrot max-1100 has-text-right-tablet">
-		<img src="img/popug.jpg" alt="" class="parrot__image">
-		<div class="parrot__text"><b>ИНТЕРНЕТ И ТЕЛЕВИДЕНИЕ</b><br/>
-				от «Зеленой Точки» <br/>
-				полностью готовы к работе</div>
-	</div>
-
-	<div class="forms max-1200">
-		<p class="forms__info">Если Вы уже абонент Зелёной точки введите:</p>
-		<form class="login-form columns" data-send="login-api.php">
-			<div class="column">
-				<div class="field">
-					<div class="control has-icons-left has-icons-right">
-						<input class="input is-medium" type="text" name="username" placeholder="Логин" value="">
-						<span class="icon is-left">
-							<i class="fas fa-user"></i>
-						</span>
-					</div>
-					<p class="error-message is-invisible help is-danger">Введите логин</p>
-				</div>
-			</div>
-			<div class="column">
-				<div class="field">
-					<div class="control has-icons-left has-icons-right">
-						<input class="input is-medium" type="text" name="password" placeholder="Пароль" value="">
-						<span class="icon is-left">
-							<i class="fas fa-key"></i>
-						</span>
-						<p class="error-message is-invisible help is-danger">Введите пароль</p>
-					</div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="field ">
-					<div class="control">
-						<button class="button zt-button js-submit-form">ОК</button>
-					</div>
-				</div>
-			</div>
-
-		</form>
-		<p class="forms__info">Если Вы еще не абонент Зелёной точки введите
-			<br/> номер мобильного телефона
-			<br/> для получения СМС-кода
-			<br/>
-			<span class="green"> и начните пользоваться Интернетом бесплатно!</span>
-		</p>
-		<form class=" test-form phone-form columns" data-send="phone-api.php">
-				<div class="column">
-					<div class="field">
-						<div class="control has-icons-left has-icons-right">
-							<input class="input is-medium" type="text" name="phone" placeholder="Телефон" value="" data-inputmask="'mask': '+7(999)999-99-99'" >
-							<span class="icon  is-left">
-								<i class="fas fa-phone"></i>
-							</span>
-							<p class="error-message is-invisible help is-danger">Недопустимый телефон</p>
-						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="field ">
-						<div class="control">
-							<button class="button zt-button js-submit-form js-reveal-sms">ОК</button>
-						</div>
-					</div>
-				</div>	
-		</form>
-		<form class=" test-form sms-form columns is-hidden" data-send="sms-api.php">
-				<div class="column">
-					<div class="field">
-						<div class="control has-icons-left has-icons-right">
-							<input class="input is-medium" type="text" name="sms" placeholder="Код подтверждения из SMS" value="">
-							<span class="icon  is-left">
-								<i class="fas fa-phone"></i>
-							</span>
-							<p class="error-message is-invisible help is-danger">Неправильный код</p>
-						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="field ">
-						<div class="control">
-							<button class="button zt-button js-submit-form">ОК</button>
-						</div>
-					</div>
-				</div>	
-		</form>
-		<p>Внимание! Срок бесплатного использования ограничен! </p>
-	</div>
-
-	<div class="zt-footer  max-1200">
-		<div class="columns">		
-			<div class="column has-text-centered-mobile">
-				<a href="http://zelenaya.net" class="link">Перейти на сайт Зелёной точки</a>
-			</div>	
-			<div class="column copyr has-text-centered">© 2008-2018 Группа компаний «Зеленая точка»</div>	
-			<div class="column has-text-right-tablet has-text-centered-mobile"><a class="phone">(8652) 333-333</a></div>
-		</div>		
-	</div>
-
-
-
-	<!-- <div class="main">
+	<div class="main">
 		<p class="responsive-mixin-example">
 			Responsive mixin
 		</p>
@@ -242,7 +140,17 @@
 			Test modal 2
 			<div class="js-close-modal">Close</div>
 		</div>
-	</div>	 -->
+	</div>	
+
+	<div class="zt-footer  max-1200">
+		<div class="columns">		
+			<div class="column has-text-centered-mobile">
+				<a href="http://zelenaya.net" class="link">Перейти на сайт Зелёной точки</a>
+			</div>	
+			<div class="column copyr has-text-centered">© 2008-2018 Группа компаний «Зеленая точка»</div>	
+			<div class="column has-text-right-tablet has-text-centered-mobile"><a class="phone">(8652) 333-333</a></div>
+		</div>		
+	</div>		
 </body>
 
 </html>
