--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,15 @@
 		</div>
 	</div>	
 
+	<div class="quiz" id="test-quiz">
+		<div class="quiz__counter"></div>
+		<div class="quiz__final">
+			Конец
+		</div>
+		<div class="quiz__questions"></div>
+		<button class="quiz__back">Назад</button>
+	</div>
+
 	<div class="zt-footer  max-1200">
 		<div class="columns">		
 			<div class="column has-text-centered-mobile">
